minor styling changes

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -114,11 +114,12 @@
                 <br/>
                 <br/>
 
-                <h4>PRICING</h4>
+                <h4 class='text-center'>PRICING</h4>
                 
                 <h3 class="w-100 text-center"> $8/Hr. or $20/4hrs.</h3>
                 <h3 class="w-100 text-center"> TUES - THURS: $15 UNLIMITED STUDENT GAMING*</h3>
-                <h6><span>*Must have proof of ID for academic institution</span></h6>
+                <br/>
+                <h6 class='text-center'><span>*Must have proof of ID for academic institution</span></h6>
               </div>
 
             </div>
