added images for xbox

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -162,19 +162,17 @@
               
                 <div id="xbox-content" class="hidden console-content">
 
-                  <h3>FEATURED TITLES:</h3>
-
                   <ul>
-                    <li>Halo Infinite</li>
-                    <li>Apex Legends</li>
-                    <li>Call Of Duty: Warzone</li>
-                    <li>Destiny 2</li>
-                    <li>Forza Horizon 4</li>
-                    <li>NBA 2k21</li>
-                    <li>Assassins Creed: Valhalla</li>
-                    <li>Gears of War 5</li>
-                    <li>Grand Theft Auto V</li>
-                    <li>Xbox Game Pass Games</li>
+                    <li><img src="/images/xbox-game-titles/halo-infinite" alt="halo"></li>
+                    <li><img src="/images/xbox-game-titles/apex-text" alt="apex-text"></li>
+                    <li><img src="/images/xbox-game-titles/assassins-creed-valhalla" alt="assassins-creed-valhalla"></li>
+                    <li><img src="/images/xbox-game-titles/cod-warzone" alt="cod-warzone"></li>
+                    <li><img src="/images/xbox-game-titles/destiny2" alt="destiny2"></li>
+                    <li><img src="/images/xbox-game-titles/forza5" alt="forza5"></li>
+                    <li><img src="/images/xbox-game-titles/gears5" alt="gears5"></li>
+                    <li><img src="/images/xbox-game-titles/gtav" alt="gtav"></li>
+                    <li><img src="/images/xbox-game-titles/nba2k21" alt="nba2k21"></li>
+                    <li><img src="/images/xbox-game-titles/gamepass" alt="gamepass"></li>
                   </ul>
 
                   <button><i class="fas fa-chevron-left"></i>&nbsp;CONSOLES</button>
@@ -186,8 +184,6 @@
               <div data-console="nintendo-switch" class="console nintendoswitch text-center"><img  class="console-logo-image" src="/images/nintendoswitchlogo.jpg" alt="switch">
                 
                 <div id="switch-content" class="hidden console-content">
-
-                  <p>FEATURED TITLES</p>
 
                   <ul>
                     <li>Mario Party</li>
