added image extension

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -163,16 +163,16 @@
                 <div id="xbox-content" class="hidden console-content">
 
                   <ul>
-                    <li><img src="/images/xbox-game-titles/halo-infinite" alt="halo"></li>
-                    <li><img src="/images/xbox-game-titles/apex-text" alt="apex-text"></li>
-                    <li><img src="/images/xbox-game-titles/assassins-creed-valhalla" alt="assassins-creed-valhalla"></li>
-                    <li><img src="/images/xbox-game-titles/cod-warzone" alt="cod-warzone"></li>
-                    <li><img src="/images/xbox-game-titles/destiny2" alt="destiny2"></li>
-                    <li><img src="/images/xbox-game-titles/forza5" alt="forza5"></li>
-                    <li><img src="/images/xbox-game-titles/gears5" alt="gears5"></li>
-                    <li><img src="/images/xbox-game-titles/gtav" alt="gtav"></li>
-                    <li><img src="/images/xbox-game-titles/nba2k21" alt="nba2k21"></li>
-                    <li><img src="/images/xbox-game-titles/gamepass" alt="gamepass"></li>
+                    <li><img src="/images/xbox-game-titles/halo-infinite.jpg" alt="halo"></li>
+                    <li><img src="/images/xbox-game-titles/apex-text.jpg" alt="apex-text"></li>
+                    <li><img src="/images/xbox-game-titles/assassins-creed-valhalla.png" alt="assassins-creed-valhalla"></li>
+                    <li><img src="/images/xbox-game-titles/cod-warzone.jpg" alt="cod-warzone"></li>
+                    <li><img src="/images/xbox-game-titles/destiny2.jpg" alt="destiny2"></li>
+                    <li><img src="/images/xbox-game-titles/forza5.png" alt="forza5"></li>
+                    <li><img src="/images/xbox-game-titles/gears5.png" alt="gears5"></li>
+                    <li><img src="/images/xbox-game-titles/gtav.png" alt="gtav"></li>
+                    <li><img src="/images/xbox-game-titles/nba2k21.jpg" alt="nba2k21"></li>
+                    <li><img src="/images/xbox-game-titles/gamepass.png" alt="gamepass"></li>
                   </ul>
 
                   <button><i class="fas fa-chevron-left"></i>&nbsp;CONSOLES</button>
