--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -163,13 +163,13 @@
                 <div id="xbox-content" class="hidden console-content">
 
                   <ul>
-                    <li><img src="/images/xbox-game-titles/halo-infinite.jpg" alt="halo"></li>
+                    <li><img src="/images/xbox-game-titles/halo-infinite.png" alt="halo"></li>
                     <li><img src="/images/xbox-game-titles/apex-text.jpg" alt="apex-text"></li>
                     <li><img src="/images/xbox-game-titles/assassins-creed-valhalla.png" alt="assassins-creed-valhalla"></li>
                     <li><img src="/images/xbox-game-titles/cod-warzone.jpg" alt="cod-warzone"></li>
                     <li><img src="/images/xbox-game-titles/destiny2.jpg" alt="destiny2"></li>
                     <li><img src="/images/xbox-game-titles/forza5.png" alt="forza5"></li>
-                    <li><img src="/images/xbox-game-titles/gears5.png" alt="gears5"></li>
+                    <li><img src="/images/xbox-game-titles/gears5.jpg" alt="gears5"></li>
                     <li><img src="/images/xbox-game-titles/gtav.png" alt="gtav"></li>
                     <li><img src="/images/xbox-game-titles/nba2k21.jpg" alt="nba2k21"></li>
                     <li><img src="/images/xbox-game-titles/gamepass.png" alt="gamepass"></li>
