modified styliing for button

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -168,11 +168,11 @@
                     <li><img src="/images/xbox-game-titles/assassins-creed-valhalla.png" alt="assassins-creed-valhalla"></li>
                     <li><img src="/images/xbox-game-titles/cod-warzone.jpg" alt="cod-warzone"></li>
                     <li><img src="/images/xbox-game-titles/destiny2.jpg" alt="destiny2"></li>
-                    <li><img src="/images/xbox-game-titles/forza5.png" alt="forza5"></li>
+                    <li class="bg-light"><img src="/images/xbox-game-titles/forza5.png" alt="forza5"></li>
                     <li><img src="/images/xbox-game-titles/gears5.jpg" alt="gears5"></li>
                     <li><img src="/images/xbox-game-titles/gtav.png" alt="gtav"></li>
                     <li><img src="/images/xbox-game-titles/nba2k21.jpg" alt="nba2k21"></li>
-                    <li><img src="/images/xbox-game-titles/gamepass.png" alt="gamepass"></li>
+                    <li class="bg-success"><img src="/images/xbox-game-titles/gamepass.png" alt="gamepass"></li>
                   </ul>
 
                   <button><i class="fas fa-chevron-left"></i>&nbsp;CONSOLES</button>
