Changed address for location

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -101,7 +101,7 @@
 
               <div class="col-xs-12">
 
-                <h4 class='w-100 text-md text-center'>24 W ELBERT ST. </h4>
+                <h4 class='w-100 text-md text-center'> 8923 S. MERIDIAN ST. SUITE A9 </h4>
                 <h4 class='w-100 text-md text-center'>INDIANAPOLIS, INDIANA, 46217</h4>
 
                 <br/>
