modified main container

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="style.css" type='text/css'>
+  <link rel="stylesheet" href="/Styles/style.css" type='text/css'>
   <title>Document</title>
 </head>
 
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
 
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo.jpg"></a>
 
       <div class="collapse navbar-collapse" id="navigation-bar-container">
         
@@ -55,17 +55,15 @@
   
       <div id="main" class='content-containers'>
   
-        <div class="row">
-  
-          <div class="col-xs-12" id='main-content-container'>
+          <div id='main-content-container'>
 
             <div class="row">
 
               <div class="main-content-header col-xs-12">
 
-                <h1 class="text-center">CHAMPIONS AREN'T BORN, THEY'RE MADE.</h1>
+                <h1 class="text-center mh-10">CHAMPIONS AREN'T BORN, THEY'RE MADE.</h1>
 
-                <h1 class="text-center">COME, SEE, AND PLAY!</h1>
+                <h1 class="text-center mh-10">COME, SEE, AND PLAY!</h1>
 
                 <br/>
                 <h2 class="text-center">έλα να παίξεις</h2>
@@ -82,8 +80,6 @@
                 </div>
                 
               </div>
-
-            </div>
 
           </div>
 
