--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -258,6 +258,7 @@
           $(this).hide(400);
           $(this).siblings().hide(400);
           $("div.console").show(400);
+          scrollToSection('console-games-content-container');
         }, 500); 
       })
   });
