modified scroll to

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -75,7 +75,7 @@
 
                   <div class="navigation-buttons" onclick="blur(); scrollToSection('about-content-container'); return false">About</div>
 
-                  <div class="navigation-buttons" onclick="blur(); scrollToSection('console-games-content-container'); return false">Games</div>
+                  <div class="navigation-buttons" onclick="blur(); scrollToSection('console-games'); return false">Games</div>
 
                 </div>
                 
@@ -258,7 +258,7 @@
           $(this).hide(400);
           $(this).siblings().hide(400);
           $("div.console").show(400);
-          scrollToSection('console-games-content-container');
+          
         }, 500); 
       })
   });
