--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -232,6 +232,35 @@
 
 </body>
 
+<footer>
+
+  <div class="footer-info-columns flex-vcenter">
+
+    <div class="location-info">
+    
+      <h6 class='text-md'> 8923 S. MERIDIAN ST. SUITE A9 </h6>
+      <h6 class='text-md'>INDIANAPOLIS, INDIANA, 46217</h6>
+
+    </div>
+
+    <div class="contact-info">
+
+      <h6 class='text-md'> CONTACT </h6>
+      <h6 class='text-md'>timothy.d.snider1@gmail.com</h6>
+      <h6 class='text-md'>317-504-4689</h6>
+
+    </div>
+
+  </div>
+
+  <div class="text-center">
+
+    <span>&copy; Spartan Gaming Lounge</span>
+
+  </div>
+
+</footer>
+
 </html>
 
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
