modified PC section and footer

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
 
-      <a class="navbar-brand" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo.jpg"></a>
+      <a class="navbar-brand" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo2.png"></a>
 
       <div class="collapse navbar-collapse" id="navigation-bar-container">
         
@@ -202,25 +202,98 @@
 
           <div class="col-xs-12 games-content-container" id='pc-games-content-container'>
 
-                <div class="pc-entity">
-                  <img src="/images/output-onlinepngtools.png" alt="pc">
-                  <span>LYSANDER</span>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/images/pcs/Lysander.jpg" alt="Avatar" style="width:300px; height:300px;">
                 </div>
+                <div class="flip-card-back">
+                  <h4 class="mb-md">LYSANDER</h4>
+                  <h6>GRAPHISCS CARD: NVIDIA 3080</h6>
+                  <h6>AVG 180-250 fps @1440p</h6>
+                  <h6>CPU: AMD 5800X</h6>
+                  <h6>
+                    <br/>
+                    RUNNING RED DRAGON KEYBOARD, MOUSE AND HEADSET
+                    <br/>
+                    GTRACING CHAIR AND DESK
+                    <br/>
+                    ONN 27' CURVED MONITOR 165HZ WITH 1MS RT
+                  </h6>
+                  <h5>For the most intense of gamers</h5>
+                </div>
+              </div>
+            </div>
 
-                <div class="pc-entity">
-                  <img src="/images/output-onlinepngtools.png" alt="pc">
-                  <span>LEONIDAS</span>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/images/pcs/Leonidas.jpg" alt="Avatar" style="width:300px; height:300px;">
                 </div>
+                <div class="flip-card-back">
+                  <h4 class="mb-md">LEONIDAS</h4> 
+                  <h6>GRAPHICS CARD: NVIDIA 2070 SUPER</h6>
+                  <h6>AVG 120-160 fps @1440p</h6>
+                  <h6>CPU: AMD 3700X</h6>
+                  <h6>
+                    <br/>
+                    RUNNING RED DRAGON KEYBOARD, MOUSE AND HEADSET
+                    <br/>
+                    GTRACING CHAIR AND DESK
+                    <br/>
+                    ONN 27' CURVED MONITOR 165HZ WITH 1MS RT
+                  </h6>
+                  <h5>Studry, tried and true</h5>
+                </div>
+              </div>
+            </div>
 
-                <div class="pc-entity">
-                  <img src="/images/output-onlinepngtools.png" alt="pc">
-                  <span>CLEOMENES</span>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/images/pcs/Cleomenes.jpg" alt="Avatar" style="width:300px; height:300px;">
                 </div>
+                <div class="flip-card-back">
+                  <h4 class="mb-md">CLEOMENES</h4> 
+                  <h6>GRAPHICS CARD: NVIDIA 1660 SUPER</h6>
+                  <h6>AVG 60-90 fps @1440p</h6>
+                  <h6>CPU: AMD 3700X</h6>
+                  <h6>
+                    <br/>
+                    RUNNING RED DRAGON KEYBOARD, MOUSE AND HEADSET
+                    <br/>
+                    GTRACING CHAIR AND DESK
+                    <br/>
+                    ONN 27' CURVED MONITOR 165HZ WITH 1MS RT
+                  </h6>
+                  <h5>Strong, Peak Performance Gaming</h5>
+                </div>
+              </div>
+            </div>
 
-                <div class="pc-entity">
-                  <img src="/images/output-onlinepngtools.png" alt="pc">
-                  <span>GORGO</span>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="/images/pcs/Gorgo.jpg" alt="Avatar" style="width:300px; height:300px;">
                 </div>
+                <div class="flip-card-back">
+                  <h4 class="mb-md">GORGO</h4>
+                  <h6>GRAPHICS CARD: NVIDIA 3060TI</h6>
+                  <h6>AVG 90-120 fps @1440p</h6>
+                  <h6>CPU: AMD 3700X</h6>
+                  <h6>
+                    <br/>
+                    RUNNING RED DRAGON KEYBOARD, MOUSE AND HEADSET
+                    <br/>
+                    GTRACING CHAIR AND DESK
+                    <br/>
+                    ONN 27' CURVED MONITOR 165HZ WITH 1MS RT
+                  </h6>
+                  <h5>Power and beauty in one package</h5>
+
+                </div>
+              </div>
+            </div>
 
           </div>
 
@@ -234,10 +307,10 @@
 
 <footer>
 
-  <div class="footer-info-columns flex-vcenter">
+  <div class="footer-info-columns flex-center mt-md">
 
     <div class="location-info">
-    
+      <h6>ADDRESS </h6>
       <h6 class='text-md'> 8923 S. MERIDIAN ST. SUITE A9 </h6>
       <h6 class='text-md'>INDIANAPOLIS, INDIANA, 46217</h6>
 
