--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -205,11 +205,11 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/images/pcs/Lysander.jpg" alt="Avatar" style="width:300px; height:300px;">
+                  <img src="/Deployment/images/pcs/Lysander.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md">LYSANDER</h4>
-                  <h6>GRAPHISCS CARD: NVIDIA 3080</h6>
+                  <h6>GRAPHICS CARD: NVIDIA 3080</h6>
                   <h6>AVG 180-250 fps @1440p</h6>
                   <h6>CPU: AMD 5800X</h6>
                   <h6>
@@ -228,7 +228,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/images/pcs/Leonidas.jpg" alt="Avatar" style="width:300px; height:300px;">
+                  <img src="/Deployment/images/pcs/Leonidas.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md">LEONIDAS</h4> 
@@ -251,7 +251,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/images/pcs/Cleomenes.jpg" alt="Avatar" style="width:300px; height:300px;">
+                  <img src="/Deployment/images/pcs/Cleomenes.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md">CLEOMENES</h4> 
@@ -274,7 +274,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/images/pcs/Gorgo.jpg" alt="Avatar" style="width:300px; height:300px;">
+                  <img src="/Deployment/images/pcs/Gorgo.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md">GORGO</h4>
