--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
 
-      <a class="navbar-brand" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo2.png"></a>
+      <a class="navbar-brand ml-md" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo3.png"></a>
 
       <div class="collapse navbar-collapse" id="navigation-bar-container">
         
@@ -116,7 +116,7 @@
 
         <div class="row">
           
-          <div class="col-xs-12">
+          <div class="col-xs-12 mt-md mb-md">
 
             <h3>CLICK TO SEE OUR GAME TITLES AVAILABLE TO PLAY</h3>
 
@@ -198,7 +198,7 @@
 
         <div class="row">
 
-          <h3 class="text-center">PCs</h3>
+          <h3 class="text-center mt-md mb-md">PCs</h3>
 
           <div class="col-xs-12 games-content-container" id='pc-games-content-container'>
 
@@ -208,7 +208,7 @@
                   <img src="/Deployment/images/pcs/Lysander.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
-                  <h4 class="mb-md">LYSANDER</h4>
+                  <h4 class="mb-md mt-md">LYSANDER</h4>
                   <h6>GRAPHICS CARD: NVIDIA 3080</h6>
                   <h6>AVG 180-250 fps @1440p</h6>
                   <h6>CPU: AMD 5800X</h6>
@@ -231,7 +231,7 @@
                   <img src="/Deployment/images/pcs/Leonidas.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
-                  <h4 class="mb-md">LEONIDAS</h4> 
+                  <h4 class="mb-md mt-md">LEONIDAS</h4> 
                   <h6>GRAPHICS CARD: NVIDIA 2070 SUPER</h6>
                   <h6>AVG 120-160 fps @1440p</h6>
                   <h6>CPU: AMD 3700X</h6>
@@ -254,7 +254,7 @@
                   <img src="/Deployment/images/pcs/Cleomenes.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
-                  <h4 class="mb-md">CLEOMENES</h4> 
+                  <h4 class="mb-md mt-md">CLEOMENES</h4> 
                   <h6>GRAPHICS CARD: NVIDIA 1660 SUPER</h6>
                   <h6>AVG 60-90 fps @1440p</h6>
                   <h6>CPU: AMD 3700X</h6>
@@ -277,7 +277,7 @@
                   <img src="/Deployment/images/pcs/Gorgo.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
-                  <h4 class="mb-md">GORGO</h4>
+                  <h4 class="mb-md mt-md">GORGO</h4>
                   <h6>GRAPHICS CARD: NVIDIA 3060TI</h6>
                   <h6>AVG 90-120 fps @1440p</h6>
                   <h6>CPU: AMD 3700X</h6>
