url to images rewrote

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -205,7 +205,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Deployment/images/pcs/Lysander.jpg" alt="Avatar">
+                  <img src="/images/pcs/Lysander.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md mt-md">LYSANDER</h4>
@@ -228,7 +228,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Deployment/images/pcs/Leonidas.jpg" alt="Avatar">
+                  <img src="/images/pcs/Leonidas.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md mt-md">LEONIDAS</h4> 
@@ -251,7 +251,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Deployment/images/pcs/Cleomenes.jpg" alt="Avatar">
+                  <img src="/images/pcs/Cleomenes.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md mt-md">CLEOMENES</h4> 
@@ -274,7 +274,7 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="/Deployment/images/pcs/Gorgo.jpg" alt="Avatar">
+                  <img src="/images/pcs/Gorgo.jpg" alt="Avatar">
                 </div>
                 <div class="flip-card-back">
                   <h4 class="mb-md mt-md">GORGO</h4>
