consoles back button goes to parent

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -389,7 +389,7 @@
           $(this).hide(400);
           $(this).siblings().hide(400);
           $("div.console").show(400);
-          scrollToSection('console-games-spacer'); 
+          scrollToSection('console-games-content-container'); 
         }, 500); 
       })
   });
