--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -118,7 +118,7 @@
           
           <div class="col-xs-12 mt-md mb-md">
 
-            <h3>CLICK TO SEE OUR GAME TITLES AVAILABLE TO PLAY</h3>
+            <h4 class="text-center ph-lg">CLICK TO SEE OUR GAME TITLES AVAILABLE TO PLAY</h4>
 
           </div>
 
@@ -325,29 +325,33 @@
 </body>
 
 <footer>
-
+  
   <div class="footer-info-columns flex-center mt-md">
 
-    <div class="location-info">
-      <h6>ADDRESS </h6>
-      <h6 class='text-md'> 8923 S. MERIDIAN ST. SUITE A9 </h6>
-      <h6 class='text-md'>INDIANAPOLIS, INDIANA, 46217</h6>
+    <div class="row">
+
+      <div class="col-md-6 col-xs-12 location-info">
+        <h6>ADDRESS </h6>
+        <h6 class='text-md'> 8923 S. MERIDIAN ST. SUITE A9 </h6>
+        <h6 class='text-md'>INDIANAPOLIS, INDIANA, 46217</h6>
+  
+      </div>
+  
+      <div class="col-md-6 col-xs-12 contact-info">
+  
+        <h6 class='text-md'> CONTACT </h6>
+        <h6 class='text-md'>timothy.d.snider1@gmail.com</h6>
+        <h6 class='text-md'>317-504-4689</h6>
+  
+      </div>
+
+      <div class="col-xs-12 text-center mb-md">
+
+        <span>&copy; Spartan Gaming Lounge</span>
+    
+      </div>
 
     </div>
-
-    <div class="contact-info">
-
-      <h6 class='text-md'> CONTACT </h6>
-      <h6 class='text-md'>timothy.d.snider1@gmail.com</h6>
-      <h6 class='text-md'>317-504-4689</h6>
-
-    </div>
-
-  </div>
-
-  <div class="text-center">
-
-    <span>&copy; Spartan Gaming Lounge</span>
 
   </div>
 
