finalized changes for mobile

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -63,7 +63,7 @@
 
                   <div class="navigation-buttons" onclick="blur(); scrollToSection('about-content-container'); return false">About</div>
 
-                  <div class="navigation-buttons" onclick="blur(); scrollToSection('console-games-spacer'); return false">Games</div>
+                  <div class="navigation-buttons" onclick="blur(); scrollToSection('console-games'); return false">Games</div>
 
                 </div>
                 
@@ -344,7 +344,7 @@
 
           </div>
 
-          <div class="col-md-6 col-xs-12 text-center">
+          <div id="contact-info" class="col-md-6 col-xs-12 text-center">
 
             <h6 class='text-md'> CONTACT </h6>
             <div class="divider mb-md mt-md"></div>
