--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -47,7 +47,7 @@
 
             <div class="row">
 
-              <div class="main-content-header col-xs-12">
+              <div loading="eager" class="main-content-header col-xs-12">
 
                 <h1 class="text-center mh-10">CHAMPIONS AREN'T BORN, THEY'RE MADE.</h1>
 
@@ -133,19 +133,19 @@
                   
                   <div class="row mb-md">
 
-                    <div class="col-xs-4">
+                    <div class="col-xs-12 col-md-4">
                       <div><img src="/images/ps4-game-titles/horizon-zero-dawn.png" alt="horizon-zero-dawn"></div>
                       <div><img src="/images/ps4-game-titles/cyberpunk-2077-free-font-1.jpg" alt="cyber-punk"></div>
                       <div><img src="/images/ps4-game-titles/spiderman-miles-morales.png" alt="spiderman-miles-morales"></div>
                     </div>
 
-                    <div class="col-xs-4">
+                    <div class="col-xs-12 col-md-4">
                       <div><img src="/images/ps4-game-titles/control.png" alt="control"></div>
                       <div><img src="/images/ps4-game-titles/god-of-war.jpg" alt="god-of-war"></div>
                       <div><img src="/images/ps4-game-titles/cod-coldwar.png" alt="call-of-dut-cold-war"></div>
                     </div>
 
-                    <div class="col-xs-4">
+                    <div class="col-xs-12 col-md-4">
                       <div><img src="/images/ps4-game-titles/the-last-of-us.jpg" alt="the-last"></div>
                       <div><img src="/images/ps4-game-titles/apex-text.jpg" alt="apex-text"></div>
                       <div><img src="/images/ps4-game-titles/fort-nite.jpg" alt="fort-nite"></div>
