changed to lazy loading

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -47,7 +47,7 @@
 
             <div class="row">
 
-              <div loading="eager" class="main-content-header col-xs-12">
+              <div loading="lazy" class="main-content-header col-xs-12">
 
                 <h1 class="text-center mh-10">CHAMPIONS AREN'T BORN, THEY'RE MADE.</h1>
 
