added new pc building section

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -323,6 +323,15 @@
 
       </div>
 
+      <div class="content-containers">
+        <div class="row">
+
+          <h3 class="text-center mt-md mb-md col-xs-12">PC BUILDING</h3>
+
+        </div>
+
+      </div>
+      
     </div>
 
 </body>
