--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -327,7 +327,7 @@
         <div class="row">
 
           <h3 class="text-center mt-md mb-md col-xs-12">PC BUILDING</h3>
-          <p class="text-center mt-md mb-md col-xs-12">New to PC gaming? Let us help you! We can custom build your PC's to meet all of your needs. </p>
+          <p class="text-center mt-md mb-md col-xs-12 text-white">New to PC gaming? Let us help you! We can custom build your PC's to meet all of your needs. </p>
         
         </div>
       </div>
