added link to fb market

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" type='text/css'>
+  <link rel="stylesheet" href="styles.css" type='text/css'>
   <title>Spartan Gaming Lounge</title>
 </head>
 
@@ -32,6 +32,8 @@
           <a class="nav-item nav-link" onclick="blur(); scrollToSection('console-games-content-container'); return false">CONSOLE GAMES</a>
 
           <a class="nav-item nav-link" onclick="blur(); scrollToSection('pc-games-content-container'); return false">PC GAMES</a>
+
+          <a class="nav-item nav-link" onclick="blur(); scrollToSection('sgl-shop-content-container'); return false">SHOP</a>
 
         </div>
 
@@ -330,6 +332,21 @@
           <p class="text-center mt-md mb-md col-xs-12 text-white">New to PC gaming? Let us help you! We can custom build your PC's to meet all of your needs. </p>
         
         </div>
+      </div>
+
+
+      <div id="sgl-shop" class='content-containers'>
+
+        <div class="row">
+
+          <div class="col-xs-12 sgl-shop-content-container" id='sgl-shop-content-container'>
+
+            <h3 class="text-center mt-md mb-md col-xs-12">TRADING CARDS & BOARD GAMES</h3>
+            <p class="text-center mt-md mb-md col-xs-12 text-white"><a href="https://www.facebook.com/SpartanGamingLounge/shop/" target="_blank">Check out our Facebook Market to see details!</a></p>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
