fixed styling images

--- a/Deployment/index.html
+++ b/Deployment/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
 
-      <a class="navbar-brand ml-md" href="#"><img id="navbar-brand-image" height="50px" src="images/sglLogo3.png"></a>
+      <a class="navbar-brand ml-md" href="#"><img id="navbar-brand-image" height="50px" src="images/spartanGamingLogo.png"></a>
 
       <div class="collapse navbar-collapse" id="navigation-bar-container">
         
